syntax = "proto3";

message PrimeRequest {
    int64 input = 1;
}

message PrimeResponse {
    repeated int64 output = 1;
}

service Prime {
    rpc GetPrime (PrimeRequest) returns (PrimeResponse) {
    }
}


